# fenix

./: .gitignore  .tool-versions  pyproject.toml  server.py
src/fenix/: __init__.py  engine.py  flight.py  launch.py
src/fenix/db/: __init__.py  client.py  connect.py  engine.py  flight.py
src/fenix/db/config/: __init__.py  config.py
src/fenix/db/engine/: engine.py
src/fenix/db/server/: client.py  server.py
src/fenix/ds/: __init__.py  acero.py  config.py  connect.py  dataset.py  engine.py  flight.py  remote.py
src/fenix/ex/: __init__.py
src/fenix/ex/acero/: __init__.py  acero.py
src/fenix/ex/arrow/: __init__.py
src/fenix/ex/arrow/nested/: __init__.py  nested.py
src/fenix/ex/arrow/quint8/: __init__.py  quint8.py
src/fenix/ex/arrow/tensor/: __init__.py  tensor.py
src/fenix/io/: __init__.py
src/fenix/io/arrow/: __init__.py  arrow.py
src/fenix/io/batch/: __init__.py  batch.py
src/fenix/io/coder/: __init__.py  coder.py
src/fenix/io/index/: __init__.py  index.py
src/fenix/io/loader/: loader.py
src/fenix/io/table/: __init__.py  table.py
src/fenix/io/torch/: __init__.py  torch.py
src/fenix/vq/: __init__.py  vq.py
tests/: test_flight.py
