[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "fenix"
readme = "README.md"
description = ""
authors = [{ name = "Nathan Lugg", email = "nrlugg@gmail.com" }]
license = { text = "MIT" }
dynamic = ["version"]

requires-python = ">=3.11"
dependencies = [
    "numpy>=1.25.2",
    "scipy>=1.11.4",
    "torch>=2.1.1",
    "accelerate>=0.24.1",
    "msgspec>=0.18.4",
    "pyarrow>=14.0.1",
    "duckdb>=0.9.2",
    "ibis-framework>=7.1.0",
    "typer>=0.9.0",
    "psutil>=5.9.6",
    "multiprocess>=0.70.15",
]

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.6.1",
    "ruff>=0.1.6",
    "isort>=5.12.0",
    "black>=23.10.0",
    "jupyterlab>=4.0.7",
]


[tool.pdm]
version = { source = "file", path = "src/fenix/__version__.py" }

[tool.pdm.build]
package-dir = "src"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
force_sort_within_sections = true
include_trailing_comma = true
group_by_package = true
line_length = 99

[tool.ruff]
line-length = 99
select = ["E", "F", "B"]
ignore = ["E501", "E741", "B905"]
unfixable = ["B"]


[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.mccabe]
max-complexity = 5

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
